# employee-attrition-classification

./: main.py  pyproject.toml
data/processed/: X_model.csv
notebooks/: 01_exploration.ipynb  02_preparation_modelisation.ipynb  05_optimisation_interpretation.ipynb
notebooks/.ipynb_checkpoints/: 01_exploration-checkpoint.ipynb  02_preparation_modelisation-checkpoint.ipynb  03_classification-checkpoint.ipynb  04_amelioration_classification-checkpoint.ipynb  05_optimisation_interpretation-checkpoint.ipynb  05_optimisation_interpretationn-checkpoint.ipynb
